[package]
name = "ghastoolkit-cli"
version = "0.1.1"

description = "GitHub Advanced Security Toolkit CLIt"
keywords = ["github", "security", "ghas"]
homepage = "https://github.com/GeekMasher/ghastoolkit-rs"
repository = "https://github.com/GeekMasher/ghastoolkit-rs"

authors = ["GeekMasher"]
license = "MIT"

readme = "../README.md"

rust-version = "1.70"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "env"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenv = { version = "0.15.0", features = ["clap"] }
env_logger = "0.11.2"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }

ghastoolkit = { path = "../core", version = "^0.2" }
