[package]
name = "ghastoolkit-cli"
description = "GitHub Advanced Security Toolkit CLIt"

version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
ghastoolkit = { path = "../core", version = "^0.9.0" }

tokio = { version = "1.39", features = ["full"] }

anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenvy = { version = "0.15", features = ["clap"] }
env_logger = "0.11"
log = "0.4"
