[package]
name = "ghastoolkit"

description.workspace = true
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]

async = ["dep:async-trait", "dep:tokio"]
toolcache = ["async", "dep:ghactions"]

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
glob = "0.3"
octocrab = "0.41"
purl = { version = "0.1", features = ["serde"] }
regex = "1.10"
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"
time = "0.3.36"

# For CodeQL in ToolCache
ghactions = { version = "^0.11", features = ["toolcache"], optional = true }

# Async
async-trait = { version = "0.1", optional = true }
tokio = { version = "^1.39", features = ["process", "macros", "rt-multi-thread", "time"], optional = true}

[dev-dependencies]
tokio = { version = "1.39", features = ["process", "macros", "rt-multi-thread", "time"] }

[[example]]
name = "codeql-packs"
path = "../examples/codeql-packs/src/main.rs"
