[package]
name = "ghastoolkit"

description.workspace = true
version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

categories.workspace = true
keywords.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]

async = ["dep:async-trait", "dep:tokio"]
toolcache = ["async", "dep:ghactions"]

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
glob = "0.3"

# GitHub API
octocrab = { version = "^0.45" }
reqwest = { version = "^0.12" }
http = "1.3"

purl = { version = "0.1", features = ["serde"] }
regex = "1.11"
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"
time = "0.3.36"
zip = "^5.0"

# For CodeQL in ToolCache
ghactions = { version = "^0.18", features = ["toolcache-all"], optional = true }

# Async
async-trait = { version = "0.1", optional = true }
tokio = { version = "^1.45", features = ["full"], optional = true}

[dev-dependencies]
anyhow = "1"
log = "^0.4"
env_logger = "^0.11"
tokio = { version = "1.42", features = ["full"] }

[[example]]
name = "codeql"
path = "../examples/codeql.rs"
required-features = ["toolcache"]

[[example]]
name = "codeql-packs"
path = "../examples/codeql-packs/src/main.rs"

[[example]]
name = "codeql-databases"
path = "../examples/codeql_databases.rs"
required-features = []
